[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerBody/PlayerBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Slide.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Fall.gd" type="Script" id=7]
[ext_resource path="res://Player/States/Die.gd" type="Script" id=8]
[ext_resource path="res://Player/WallJump.gd" type="Script" id=9]
[ext_resource path="res://Player/SlideJump.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Run" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="States/Run"]
wait_time = 0.25
one_shot = true

[node name="Slide" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="States/Slide"]
wait_time = 0.1
one_shot = true

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="WallJump" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="SlideJump" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="PlayerBody" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 2 )
scale = Vector2( 1, 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 11

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="FloorRays" type="Node2D" parent="."]

[node name="Middle" type="RayCast2D" parent="FloorRays"]
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Left" type="RayCast2D" parent="FloorRays"]
rotation = 0.785398
enabled = true
cast_to = Vector2( 0, 4 )

[node name="Right" type="RayCast2D" parent="FloorRays"]
rotation = -0.785398
enabled = true
cast_to = Vector2( 0, 4 )

[node name="WallRays" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="WallRays"]
enabled = true
cast_to = Vector2( -4, 0 )

[node name="Right" type="RayCast2D" parent="WallRays"]
enabled = true
cast_to = Vector2( 4, 0 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
